kubernetes/core/gateway/backendtrafficpolicy-ratelimit.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.envoyproxy.io/backendtrafficpolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: jellyfin-ratelimit
  namespace: envoy-gateway-system
spec:
  targetSelectors:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      matchLabels:
        ratelimit: jellyfin
  rateLimit:
    local:
      rules:
        - limit:
            requests: 40
            unit: Second
