kubernetes/core/gateway/securitypolicy-ipallowlist.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: ipallowlist
  namespace: envoy-gateway-system
spec:
  targetSelectors:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      matchLabels:
        ipallowlist: "true"
  authorization:
    defaultAction: Deny
    rules:
      - action: Allow
        principal:
          clientCIDRs:
            - 127.0.0.1/32
            - 10.0.0.0/8
            - 192.168.0.0/16
            - 222.154.229.189/32
